fix(Settings): align MultiselectMenu styles to multiselect ones

--- a/src/components/MultiselectMenu/MultiselectMenu.less
+++ b/src/components/MultiselectMenu/MultiselectMenu.less
@@ -17,6 +17,7 @@
         color: var(--primary-foreground-color);
         padding: 0.75rem 1.5rem;
         display: flex;
+        flex: 1;
         justify-content: space-between;
         align-items: center;
         gap: 0 0.5rem;
