--- a/src/routes/Settings/styles.less
+++ b/src/routes/Settings/styles.less
@@ -261,7 +261,10 @@
                     }
 
                     .option-input-container {
-                        padding: 1rem 1.5rem;
+                        
+                        &.multiselect-container {
+                            background: var(--overlay-color);
+                        }
 
                         &.button-container {
                             justify-content: center;
